# decker-ai-strategy-builder

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPER_README.md  README.md  llms.txt
.github/: REPO_DISCOVERABILITY.md
.github/ISSUE_TEMPLATE/: 01-product-usage.yml  02-api.yml  03-cursor-skills.yml  04-self-hosting.yml  bug_report.md  config.yml  signal_feedback.md
.github/workflows/: ci.yml  publish-sdk.yml
assets/: README.md
concept/: labeling_algorithm.md  market_state_theory.md  sequence_engine.md  signal_llm_concept.md
diagrams/: system_flow.md
docs/: AGENT_SKILLS_PUBLIC_SUMMARY.md  BRAND_GUIDE.md  DECKER_AGENT_SKILLS.md  DECKER_PIPELINE_DATAFLOW_2026-05-09.md  DEVELOPER_API_GUIDE.md  GITHUB_COMMUNITY.md  ONBOARDING_PUBLIC.md  PUBLIC_REPO_REBUILD_PROPOSAL.md  RELEASE_CHECKLIST_PUBLIC_DOCS.md  TELEGRAM_AGENT_COMMANDS.md  TWO_WAY_MODEL.md  api-guide.md  architecture.md  engine-recipe-and-run.md  llms.txt  model.md  pricing-spec.md  quickstart.md  risk-management.md  roadmap.md  signal-performance.md  strategy-dsl.md  usage-guide.md  waitlist.md
examples/: signal_example.md  state_response_masked.example.json  strategy_prompt_example.md
operation_rules/: PATCHNOTES.md  RULES.yaml
samples/: README.md  api-client-python.py  signal-push-strategy.sh  strategy-demo.py
sdk/python/: README.md  pyproject.toml
sdk/python/decker_client/: __init__.py  _http.py  exceptions.py  health.py  reading.py  signals.py  state.py
sdk/python/tests/: test_client.py
turnkey/: .env.example  README.md  bot.py  verify_api.py
utils/: tf_alignment_utils.py
(+28 files in other folders)
