[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "decker-client"
version = "0.1.0"
description = "Official Python SDK for the Decker Public API — crypto signal & narrative engine"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Decker AI", email = "api@decker-ai.com" }]
keywords = ["crypto", "trading", "signals", "decker", "api"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
  "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = ["respx>=0.20", "pytest>=7", "pytest-asyncio"]

[project.urls]
Homepage       = "https://decker-ai.com"
API-Docs       = "https://api.decker-ai.com/docs"
Source         = "https://github.com/gigshow/decker-ai"
"Bug Tracker"  = "https://github.com/gigshow/decker-ai/issues"
Changelog      = "https://github.com/gigshow/decker-ai/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["decker_client"]
